# gporca

./: .gitignore  CMakeLists.txt  Makefile  README.md  asdfasd
concourse/: build_and_test_centos5_debug.yml  build_and_test_centos5_release.yml  clone_remote_repo_gpdb4.yml  package_tarball_centos5_debug.yml  package_tarball_centos5_release.yml  pipeline.yml  pr_pipeline.yml  test_explain_ds_suite_pipeline.yml  test_orca_2x_pipeline.yml  test_orca_pipeline.yml  untar_build_and_test_centos5_debug.yml  untar_build_and_test_centos5_release.yml  upload_orca_source_bintray.yml
concourse/xerces-c/: build_xerces_centos5.yml  package_tarball_centos5.yml
data/dxl/minidump/: AddPredsInSubqueries.mdp  AddRedistributeBeforeInsert-1.mdp  AddRedistributeBeforeInsert-2.mdp  AddRedistributeBeforeInsert-3.mdp  AddRedistributeBeforeInsert-4.mdp  AddRedistributeBeforeInsert-5.mdp  AnySubqueryWithAllSubqueryInScalar.mdp  AnySubqueryWithSubqueryInScalar.mdp  BitmapIndexScan.mdp  CTAS-With-Global-Local-Agg.mdp  CardinalityEstimationScalarIdentCast.mdp  CollapseNot.mdp  ConstTblGetUnderSubqWithNoOuterRef.mdp  ConvertHashToRandomSelect.mdp  Correlated-AntiSemiJoin.mdp  Correlated-SemiJoin.mdp  CorrelatedAntiSemiJoin-True.mdp  CorrelatedNLJ-PartSelector-Subplan.mdp  CorrelatedNLJWithTrueCondition.mdp  CorrelatedSemiJoin-True.mdp  Correlation-With-Casting-1.mdp  DML-Function-With-SQL-Access.mdp  DML-Replicated-Input.mdp  DML-UnionAll-With-Universal-Child.mdp  DML-With-CorrelatedNLJ-With-Universal-Child.mdp  DML-With-Join-With-Universal-Child.mdp  DML-With-WindowFunc-OuterRef.mdp  DMLCollapseProject.mdp  DPE-IN.mdp  DPE-NOT-IN.mdp  DPEIDFWithCast.mdp  DQA-SplitScalar.mdp  DirectDispatchOnAggWithoutAnyGroupingCol.mdp  DisableLargeTableBroadcast.mdp  DontAddRedistributeBeforeInsert-1.mdp  DontAddRedistributeBeforeInsert-2.mdp  DynamicBitmapIndexScan.mdp  DynamicIndexGet-OuterRefs.mdp  EquivClassesAndOr.mdp  Equivalence-class-project-over-LOJ.mdp  (+76 more)
data/dxl/parse_tests/: q38-DynamicScan-PartitionSelector.xml
libgpdbcost/: CMakeLists.txt
libgpdbcost/src/: CCostModelGPDB.cpp
libgpopt/: CMakeLists.txt
libgpopt/src/base/: CColRefTable.cpp  CColumnFactory.cpp  CConstraint.cpp  CConstraintInterval.cpp  CDistributionSpecHashed.cpp  CDistributionSpecSingleton.cpp  CDistributionSpecStrictHashed.cpp  CDistributionSpecUniversal.cpp  CDrvdProp.cpp  COptimizationContext.cpp  CPartInfo.cpp  (+5 more)
libgpos/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
libgpos/include/gpos/: _api.h
libgpos/include/gpos/common/: CLink.h
libgpos/include/gpos/memory/: CCache.h  CMemoryPool.h  CMemoryPoolManager.h
libgpos/include/gpos/task/: CAutoTaskProxy.h  CTask.h
libgpos/include/gpos/test/: CUnittest.h
libgpos/libgpos/: Makefile
libgpos/libgpos/include/gpos/: version.h
libgpos/libgpos/server/: Makefile
libgpos/server/: CTestTestfile.cmake  Makefile  cmake_install.cmake
libgpos/src/: _api.cpp
libgpos/src/common/: CMainArgs.cpp
libgpos/src/memory/: CMemoryPool.cpp  CMemoryPoolManager.cpp
libgpos/src/task/: CAutoTaskProxy.cpp
libgpos/src/test/: CUnittest.cpp
libnaucrates/: CMakeLists.txt
libnaucrates/src/: CDXLUtils.cpp  CIdGenerator.cpp  exception.cpp  init.cpp  traceflags.cpp
server/: CMakeLists.txt  dxl.xsd
(+133 files in other folders)
